# crowd_counting_CPP

./: CMakeLists.txt  CrowdCountingAPI.cpp  CrowdCountingAPI.h  crowd_counting.cpp  crowd_counting.h  hongqiao_dt5_lr1e5_bs1_ep50.pb  main  main.cpp  readme.md
test_images/: frame_01120.npy  frame_01120.xml
